refactor: replace isEmpty check with isBlank in validation logic